Adding_UTM_source_identification_and_endurance

--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WWHM8L25G6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-WWHM8L25G6');
+    </script>
+    <!-- Google tag ends -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🤝</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BizMitra - Your Business Friend on WhatsApp</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -69,5 +80,13 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
+    <script>
+        window.bizmitraConfig = {
+            apiKey: 'bm_64598b2018788b221e34fbe23288338580b9dce7839db86d6f3214089caaece7',
+            businessName: 'BizMitra.ai',
+            headerColor: '#00bf63'
+        };
+        </script>
+  <script src="https://widget.bizmitra-ai.com/bizmitra-widget2.js"></script>
   </body>
 </html>
